@@ -1,22 +1,24 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX flex-2.5.33-pic.patch 531 RMD160 b76f8e0e95350bf2ea44466b1eafe27b2721a693 SHA1 626d9c621f88de4f4aafdc2cc591825543abe2e5 SHA256 c37bc0a3da23cd523a115971dfdda08b524107e4a67ef507887b0c4eb9fd565e
-AUX flex-2.5.34-isatty.patch 1221 RMD160 fe70e4737fbff4f5b1048795e0fcafdc55ab97af SHA1 e994eee87933db613bb0662d825de9ec1468c4ec SHA256 7b3e8e51dfb91de195eb750f610516cbc9a9b842334a79ace6a6acef45b457db
-AUX flex-2.5.35-gcc44.patch 463 RMD160 1b9e44f249ed033d3d594eba41ddb05b6d37ddef SHA1 dc621f445067c6bc789c415bb9a9308953e79105 SHA256 7ca26dcd1329bdf2ba5c4095db913ba4af5a92178f1a1d603fb6d01fbef244ee
-AUX flex-2.5.35-mint.patch 1223 RMD160 d0ba1fc6505b1f4999224b5d9c0f501f9916fefc SHA1 2219e9e5908e6478b5b1328f53b3626b545bde0f SHA256 30f88d7ca4ba03920b898f5deb5146fe067b8ad326b4dae906c60abbc2445100
-AUX flex-2.5.35-rpl_alloc.patch 1306 RMD160 6220bf485f08165544a1181c22799dbd1bb04389 SHA1 ae806578ab165250f4da66abfec6f8185c18b89f SHA256 3eba70c174142848561121a39350632670fdd85dd6a02674138886dbfbd7db1b
-AUX flex-2.5.35-saneautotools.patch 2929 RMD160 b91c9b45e86883d2dafe8aa56ee58f3944185d0b SHA1 d940600fc8946e557e48d36a84313b73f0df12d7 SHA256 e8bb36d69f3f73704c44ae357f6306380411b7f73614e675dacd177d4e5ddd21
-DIST flex-2.5.35.tar.bz2 1256501 RMD160 4827f940e227f9d2f454c021f69dd1c7ad3e76f4 SHA1 c507095833aaeef2d6502e12638e54bf7ad2f24a SHA256 0becbd4b2b36b99c67f8c22ab98f7f80c9860aec70f0350a0018f29a88704e7b
-DIST flex_2.5.35-10.diff.gz 41011 RMD160 513af2ed6609fbe603d4651ab702fdce20acdc46 SHA1 5a06f489682cd4f6cb1d771efda9baeb3f8d3167 SHA256 1d57a2a73ae7b7d4bd95a7c3f5801ab39c0b2b55b5d838782da8d3801cc1a3b9
-EBUILD flex-2.5.35.ebuild 1584 RMD160 a8ef0fb7c79ed78f6516b995835a43d665212b4a SHA1 ecb2bdfd24e074234af0a74f57075e68e9c78158 SHA256 9e789c79f5287ffa0f964c665700226d2e12aab475fdeecdff30ce5662556912
-EBUILD flex-2.5.35_p10.ebuild 1590 RMD160 61cda98ada23980a3dbb878f4de522a7b2dd53f7 SHA1 15675fd8835510b6753a7c5dfc3524e127e92317 SHA256 6fe47082f1ce8bb900d219c33fbbc7839564ed6880faaa917c8e38a8bb3cf219
-MISC ChangeLog 10643 RMD160 f9ee271ece4bdcf0987a624e65cfe237da6a70bd SHA1 7f92c390f8fb2651f8fb8fe04c63e19aa6db8738 SHA256 4124a10182670f44c64c239b1d67f235355b2f4fbe4bc6a1bb1a09fa0ba358c9
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+AUX flex-2.5.33-pic.patch 531 SHA256 c37bc0a3da23cd523a115971dfdda08b524107e4a67ef507887b0c4eb9fd565e SHA512 0921dcec0208c861ab74fc497c139c0253c8014b71544388c13ed24a8e297ac093de593768c69904535d654110c45cd83ffa2d8d821eb13fb08ed94bf7077e11 WHIRLPOOL d6484c20e394ce1c403afdbfda2382115435879c5f90b81b0ffc496567138c317af87f01367eed85a55a3ec6e5b9daab2074e8ad9b6f7f716602539ac4346678
+AUX flex-2.5.34-isatty.patch 1221 SHA256 7b3e8e51dfb91de195eb750f610516cbc9a9b842334a79ace6a6acef45b457db SHA512 efcc73d6f2f07555eb8de062d87a64f462e2c42c401cbb8742b404fb305c248925af9d29c12633d7352cd33ebed899040f89418dde0e021a1d5b0da94bfdb631 WHIRLPOOL a01a174dffc60a58ff840e198daa181156def72244d8a5c2cbfb748496a02d70398fa73ef9c15b86cf7c19d57054507381ef89ed1c20427a46dfc81d8f90b778
+AUX flex-2.5.35-gcc44.patch 463 SHA256 7ca26dcd1329bdf2ba5c4095db913ba4af5a92178f1a1d603fb6d01fbef244ee SHA512 68c4ba0b4a591446dec4072ade6e3493d011e857d086f999c0108d9d7b5ed2a9ec87111912f3425bc5222d3637fd05a5a5fbd7172317a09ed04dad40fa8059e1 WHIRLPOOL 0a4ef36056d5add49fb1fd0e9f36dbeb0f1d7cd00e285647770c95de793f6823582a32c525253591460d954625c50e1343d2f0c2e0d5e17a62d8a7568f25fcc7
+AUX flex-2.5.35-mint.patch 1223 SHA256 30f88d7ca4ba03920b898f5deb5146fe067b8ad326b4dae906c60abbc2445100 SHA512 3726c7ac845040f97d81a97b24d6e7ef2f12f827c429df8e17dbf736971f2c76f852176505584d9482fe71aff773aab30c3380102a81b03bc8e7ba952f1fe059 WHIRLPOOL 8f99b48757874137f05e1ed74eb873ae6d2b038e9142ebd3ad95a941cad4464d1ac627c74dce0f0e6d30982a5f5f6d6fc6647421fa93d9321feae64ca9edf31b
+AUX flex-2.5.35-rpl_alloc.patch 1306 SHA256 3eba70c174142848561121a39350632670fdd85dd6a02674138886dbfbd7db1b SHA512 5e05a9b7ea2269bc3d9ba92038a0badd4c5d490d94a26e94e5947182363773d373f1c67baf701505383d60decf478ad0bfe60c566d82d40d66e9d714228a5d9e WHIRLPOOL a81e762c86924a606f700b399a429abd0d272c95e9282f5a5970264cf9797a5477ca6a97a920e6a922ad0d91db6fd487377f450d0d5494dac7086d762f1b9654
+AUX flex-2.5.35-saneautotools.patch 2929 SHA256 e8bb36d69f3f73704c44ae357f6306380411b7f73614e675dacd177d4e5ddd21 SHA512 f10929ba77aef0e75199afee52e39758a34538f8e767b3d122e40515ecf6cb4fdf69cceff44bae6778e2cd8f741d6fc3f987d5aa981f583deef510df0293f2da WHIRLPOOL d2555cebee0dd4498a93f0deebcf73b11ce39ba664f1b1b7c9205741f628df00c03b36a8d244d5118c6b5a9dd3b6995aefe06560f1f09f11baa07e677f7b3fdf
+DIST flex-2.5.35.tar.bz2 1256501 SHA256 0becbd4b2b36b99c67f8c22ab98f7f80c9860aec70f0350a0018f29a88704e7b SHA512 aa5aebbc7ccaa4697d7f0cfa3ba899dd3b327bc8551ba341c26bece7f9044951d0532e3ebf6ec63760204b4ff805f9f957d064e9a213ef8aac428e565de31343 WHIRLPOOL 5cb46a2cec84b1c6d25e22a1e4a6ac1a5100fcf32a488918f8bfe9236339ff2aac7f2dc35a590417fe1609d89511ab47de4ba4f7db17251b7408ea0f18e6894d
+DIST flex-2.5.37.tar.bz2 1303313 SHA256 17aa7b4ebf19a13bc2dff4115b416365c95f090061539a932a68092349ac052a SHA512 1f34285953a7f058e6a2dddc305fc82cfcaaa451d6d7777da17bf9cccbe4a08e480c8c28951fa5d2920e7c7adc40ccd0e51191b363c9a3c4137db5ded1cbbc2a WHIRLPOOL ee5a4dde9b373c57248df261a53ea951e12ccb3e6f2e6344c56c2d8393511389560b4843660edf2a0929e2ed6fc46ab8d832e36a8ee5fe4317ce85ccea14d6ca
+DIST flex_2.5.35-10.diff.gz 41011 SHA256 1d57a2a73ae7b7d4bd95a7c3f5801ab39c0b2b55b5d838782da8d3801cc1a3b9 SHA512 ecb64cb5d27da0c82c99958640ee5f09afff4096a93817f68f3333f86a838ab4f21daf959bfc650b89e0d52a827c55265cb4c4a4f9efab050a8f91dd82258820 WHIRLPOOL 4fa27c32d81c766e657645816e4a24e46b126e5eb38ad38fc66a7d3d3e3100b76ec694898dcbcc486687f4ec9d89d517a670f7ca20de22586d2f0b56a7fe50cd
+EBUILD flex-2.5.35.ebuild 1584 SHA256 9e789c79f5287ffa0f964c665700226d2e12aab475fdeecdff30ce5662556912 SHA512 1425fc7accdfcdb5a3e03a7a880620b4020d14e9eed1413fe90d9d39cd35ee376190f8dd85f250cc3d1fd9922ba4ca0bc022f433905294d9c2940e579eb88ba6 WHIRLPOOL 2885fd616ff061f4bfaf3d1140d30cdc7f274579e2130ee5a1cc2008f3d8c9d3f14e794c51e20c8f5e5d7c8c85af353ae699f14e47d4476238bcbebed1877603
+EBUILD flex-2.5.35_p10.ebuild 1590 SHA256 6fe47082f1ce8bb900d219c33fbbc7839564ed6880faaa917c8e38a8bb3cf219 SHA512 bdebabe204c56fb70e47be4a5ff88cc95e70fd9815c8d578bc886bf8e0c0bfe64e3817d3266b6cf17bde90bfe2c95ddfead0534a0d07f96ba5fc11b8e8beb09a WHIRLPOOL 9aff557b02e8d10a53dbe325b8ff7aed24dc452430f977db465a2fb86c72b5d3034d0da6aacc0b56979cb76da015845033d3eaf967b3cabf4cbb498b7d50ab35
+EBUILD flex-2.5.37.ebuild 1548 SHA256 3abbd867e2d6ebf45526bcccb64999ae14fac65a4268837878d7197676a4552e SHA512 1df332e70e936b2557c7aff1abfee5f83c055f2d1140d30eb19551dfa04c9b1562469bbe11cd5b127b41a2e2a46b1622d76431b96cbdd412ab62e9147c9d57c3 WHIRLPOOL 59e1c5eb9bf61f40f40738a5417bf87f1129828e5385f92b21f085d986f676390dbb3259fda7390fdbfc441167e5cd0f8f97a1674c5fb3effb44793aed9aab7f
+MISC ChangeLog 10999 SHA256 f18b322b720b4cac295ded8e023a5be1e083b0b86f6584a6d6c18e176c6cc67f SHA512 4ed9d7e30a6973f7d9b0d4e3cc5301cc438ccec4092eb7b63b8e8a23356e78f2b62d4fcac8b15acbb1806dbf22dd93587b106376d6ac95380752d2129b4af53e WHIRLPOOL 38768f7c511ad4f33eed90f829ea4e69521d64c7fba970a0a2367309fa6a570659cd92a27bbff092c258d964191cde64ea186981627e616ddd51fb542e8bcffc
+MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/A4l8ACgkQX3X2B8XHTomqSQCeJLgaV0f+iDVoiADDHY4t+kZ7
-48QAoJoMlDcYBrPCGEiZZcCLN2on3NzX
-=MA5W
+iEYEAREIAAYFAlCLv1MACgkQX3X2B8XHTol+NgCcCUwD3cMM2CpjpePLFj07oUg8
+E5wAn1TEnhARsUS+xi7DztkQ5wpHVg9V
+=nMah
 -----END PGP SIGNATURE-----
